# formal-lang-course

./: 	mp	mp  .gitignore  .pre-commit-config.yaml  Gram.g4  MY_LANG_DEFAULTS.md  Makefile  README.en.md  README.md  Task_5.ipynb  bzip_expected_LTCG.dot  download_and_save_cfpq.py  exp.ipynb  experiment.ipynb  min_gql_specification.md  pyproject.toml  requirements.txt  rpq_exp.ipynb  rpq_research.ipynb  tasks.en.md  tasks.md  tasks_bonus.md
cfg_files/: cfg1  cfg1_wcnf  cfg2  cfg2_wcnf  cfg3  cfg3_wcnf
docs/: exam.md
experiments/: task5_report.ipynb
output/: expected_graph.dot
project/: AdjacencyMatrixFA.py  BoolDecomposedNFA.py  CBBoolDecomposedNFA.py  HW01.ipynb  LangDocs.md  MyGQL.g4  README.md  __init__.py  __main__.py  adjMat.py  adjacency_matrix.py  adjacency_matrix_fa.py  algorithm.py  automata.py  automata_builder.py  automata_tools.py  automata_utils.py  automaton_conversion.py  automaton_lib.py  automaton_manager.py  automaton_tools.py  automaton_utils.py  bfs_rpq.py  bool_automaton.py  bool_decomp.py  boolean_decomposition.py  boolean_decompositon.py  boolean_decompositonNFA.py  boolean_matrices.py  boolean_matrix.py  bridge.py  build_graph.py  cb_rpq.py  cf_graph_recognizer.py  cfg.py  cfg_manager.py  cfg_utils.py  cfpq.py  check_master.py  commands.py  (+121 more)
researches/: README.md  rpq_research.ipynb
resources/: .gitignore  cfg1  dfa1.dot  dfa2.dot  dfa3.dot  dfa4.dot  example_saving.dot  expected1.dot  expected2.dot  graph1
script/: run.py  shared.py
scripts/: buildParser.sh  run_tests.py  shared.py
tasks/: task1.md  task10.md  task10_bonus.md  task11.md  task11_bonus.md  task12.md  task12_bonus.md  task13.md  task14.md  task15.md  task16.md  task2.md  task3.md  task4.md  task5.md  (+6 more)
(+606 files in other folders)
